--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 # Ignore these files when commiting to a git repository
 #
 # The original version of this file is found here:
-# https://github.com/fortuity/rails3-gitignore/raw/master/gitignore.txt
+# https://github.com/RailsApps/rails3-application-templates/raw/master/files/gitignore.txt
 #
 # Corrections? Improvements? Create a GitHub issue: 
-# https://github.com/fortuity/rails3-gitignore/issues
+# http://github.com/RailsApps/rails3-application-templates/issues
 #----------------------------------------------------------------------------
 
 # bundler state
@@ -61,4 +61,5 @@ tmp/*
 
 # vim artifacts
 **.swp
-
+# keep OmniAuth service provider secrets out of the Git repo
+config/initializers/omniauth.rb
