--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,10 +1,10 @@
 development:
   host: localhost
-  database: testapp_development
+  database: rails3_mongoid_omniauth_development
 
 test:
   host: localhost
-  database: testapp_test
+  database: rails3_mongoid_omniauth_test
 
 # set these environment variables on your prod server
 production:
