--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,20 +1,12 @@
 development:
-  host: localhost
-  database: rails3_mongoid_omniauth_development
-
+  sessions:
+    default:
+      database: mongoid
+      hosts:
+        - localhost:27017
 test:
-  host: localhost
-  database: rails3_mongoid_omniauth_test
-
-# set these environment variables on your prod server
-production:
-  host: <%= ENV['MONGOID_HOST'] %>
-  port: <%= ENV['MONGOID_PORT'] %>
-  username: <%= ENV['MONGOID_USERNAME'] %>
-  password: <%= ENV['MONGOID_PASSWORD'] %>
-  database: <%= ENV['MONGOID_DATABASE'] %>
-  # slaves:
-  #   - host: slave1.local
-  #     port: 27018
-  #   - host: slave2.local
-  #     port: 27019
+  sessions:
+    default:
+      database: mongoid
+      hosts:
+        - localhost:27017
